language/move-lang/tests/move_check/parser/expr_if_missing_parens.exp
error: 

   ┌── tests/move_check/parser/expr_if_missing_parens.move:4:12 ───
   │
 4 │         if v < 3 ()
   │            ^ Unexpected token: 'v'
   ·
 4 │         if v < 3 ()
   │            - Expected: '('
   │

