language/move-lang/tests/move_check/parser/expr_if_missing_parens.move
module M {
    f(v: u64) {
        // Test an "if" expression missing parenthesis around the condition
        if v < 3 ()
    }
}
